--- a/projetos/templates/projetos/editar_projeto.html
+++ b/projetos/templates/projetos/editar_projeto.html
@@ -123,25 +123,27 @@
     <span lang="pt">Grupo:</span>
     <span lang="en" style="display: none;">Group:</span>
     <br>
-    <table id="AlocacaoEstudantes" style="margin-left: 12px; table-layout: fixed; max-width: 100%; width:max-content;">
-      <tr><td style="text-align: center;"><small>
+    <table id="AlocacaoEstudantes" style="margin-left: 12px; margin-right: 102px; table-layout: fixed; max-width: 95%; width: 740px;">
+      <thead>
+      <tr><td style="text-align: center; width: 6.5em;"><small>
         <span lang="pt">Estudante</span>
         <span lang="en" style="display: none;">Student</span>
-        Estudante
         #</small></td>
         <td style="text-align: center;"><small>
           <span lang="pt">Nome do Estudante</span>
           <span lang="en" style="display: none;">Student Name</span>
         </small></td>
-        <td><span class="AddNew" style="cursor:pointer;">&#10753;</span></td></tr>
+        <td style="width: 1em;"><span class="AddNew" style="cursor:pointer; margin-left: 4px;">&#10753;</span></td></tr>
 
+      </thead>
+      <tbody>
       {% for alocacao in alocacoes %}
         <tr>
           <td>
-            <label for="estudante{{forloop.counter}}" style="white-space: nowrap;">
+            <label for="estudante{{forloop.counter}}" style="white-space: nowrap; width: 1%;">
               <span lang="pt">Estudante</span>
               <span lang="en" style="display: none;">Student</span>
-              <span style="width:1em; text-align:left; display:inline-block;">{{forloop.counter}}:</span></label></b>
+              <span style="width:1em; text-align:left; display:inline-block;">{{forloop.counter}}:</span></label>
           </td>
           <td>
             <select class="selectpicker show-tick estudantes" name="estudante" id="estudante{{forloop.counter}}" title="Selecione estudante membro do projeto"
@@ -159,10 +161,11 @@
             </select>
           </td>
           <td>
-            <span class='RemoveRow' style="cursor:pointer;">&#8861;</span>
+            <span class="RemoveRow" style="cursor:pointer; margin-left: 4px;">&#8861;</span>
           </td>
       </tr>
     {% endfor %}
+    </tbody>
     </table>
 
     {% comment %} No usado para criar novas alocações {% endcomment %}
@@ -171,7 +174,7 @@
         <td>Estudante 0: </td>
         <td>
           <select class="selectpicker show-tick estudantes" name="estudante" title="Selecione estudante membro do projeto"
-          data-live-search="true" data-width="560px">
+          data-live-search="true" data-width="100%">
               <option selected value> -- selecione estudante -- </option>
               <optgroup label="Semestre Capstone">
               {% for estudante in estudantes %}
@@ -184,7 +187,7 @@
               </optgroup>
           </select>
         </td>
-        <td><span class='RemoveRow'>&#8861;</span></td>
+        <td><span class="RemoveRow" style="cursor:pointer; margin-left: 4px;">&#8861;</span></td>
     </table>
 
     <br>
@@ -207,10 +210,11 @@
 
     function renumera() {
       $("tr").each(function(){
-        var position= $('#AlocacaoEstudantes tr').index($(this))
+        var position= $("#AlocacaoEstudantes tr").index($(this))
         if(position!=0) {
-          texto = '<label for="estudante' + position + '">Estudante <span style="width:1em;text-align:left;display:inline-block;">' + position + '</span> </label></b>:';
+          texto = '<label for="estudante' + position + '"><span lang="pt">Estudante</span><span lang="en" style="display: none;">Student</span> <span style="width:1em;text-align:left;display:inline-block;">' + position + ':</span></label>';
           $(this).children("td").first().html(texto);
+          {% include "linguas_ajax.html" %}
         }
       })
     }
