--- a/professores/templates/professores/resultado_projetos.html
+++ b/professores/templates/professores/resultado_projetos.html
@@ -18,7 +18,13 @@
       cursor:pointer;
       text-align: center;
     }
-    td {padding: 4px;}
+    tr, th {
+      border: 1px solid #999;
+    }
+    td {
+      padding: 4px;
+      border: 1px solid #ddd;
+    }
     tbody tr:nth-child(even) {background-color: #f2f2f2;}
     tbody tr:nth-child(odd) {background-color: #f9f9f9;}
     ul {
